--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    font-family: 'Open Sans', sans-serif;
+    background-color: #f7f7f7;
+    font-size: 14px;
+}
