--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -21,3 +21,21 @@ svg {
   height: 18px;
   width: 18px;
 }
+
+.gradient-background {
+  background: linear-gradient(45deg, #b31312, #ea906c, #2b2a4c, #eee2de);
+  background-size: 400% 400%;
+  animation: gradientAnimation 15s ease infinite;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
