--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -1,13 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-body {
-  font-size: 14px;
-  background: #f9fafb;
-  color: black;
-}
-
 a {
   text-decoration: none !important;
   color: currentColor !important;
@@ -17,15 +7,23 @@ button {
   border: none;
 }
 
-svg {
-  height: 18px;
-  width: 18px;
-}
-
 .gradient-background {
   background: linear-gradient(45deg, #b31312, #ea906c, #2b2a4c, #eee2de);
   background-size: 400% 400%;
   animation: gradientAnimation 15s ease infinite;
+}
+.gradient-background-button {
+  background: linear-gradient(45deg, #b31312, #ea906c, #2b2a4c, #eee2de);
+  background-size: 400% 400%;
+  animation: gradientAnimation 15s ease infinite;
+}
+
+.gradient-background-button:hover {
+  background-size: 200% 200%;
+}
+
+.gradient-background-button:active {
+  background-size: 100% 100%;
 }
 
 @keyframes gradientAnimation {
@@ -39,3 +37,31 @@ svg {
     background-position: 0% 50%;
   }
 }
+
+/* 
+//düz input
+<div class="input">
+          <i
+            class="text-#9e9e9e z-1 h-24px w-24px left-14px i-line-md-cog-loop absolute flex h-full items-center"
+          />
+          <input type="text" placeholder=" " id="username" />
+          <label class="cursor-text" for="username">Username</label>
+          
+</div> 
+
+//şifre için input
+<div class="input">
+          <i
+            class="text-#9e9e9e z-1 h-24px w-24px left-14px i-line-md-cog-loop absolute flex h-full items-center"
+          />
+          <input type="text" placeholder=" " id="username" />
+          <label class="cursor-text" for="username">Username</label>
+          <div
+            class="w-42px z-4 right-14px h-42px -translate-y-50% hover:bg-#6236ff30 duration-400 absolute top-1/2 flex cursor-pointer items-center justify-center rounded-full transition-all"
+          >
+            <i class="h-24px w-24px i-line-md-watch-loop text-#00000090" />
+          </div>
+</div> 
+
+
+*/
